Improvements: API key auth, tool groups, optimized tool descriptions, EDQ enhancements